--- a/angular.json
+++ b/angular.json
@@ -18,6 +18,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
+            "allowedCommonJsDependencies": ["sweetalert2"],
             "outputPath": "www",
             "index": "src/index.html",
             "main": "src/main.ts",
