--- a/package.json
+++ b/package.json
@@ -29,9 +29,11 @@
     "@capacitor/status-bar": "4.1.1",
     "@ionic/angular": "^7.0.0",
     "@ionic/pwa-elements": "^3.1.1",
+    "@sweetalert2/ngx-sweetalert2": "^12.1.0",
     "ionicons": "^7.0.0",
     "qs": "^6.11.1",
     "rxjs": "~7.5.0",
+    "sweetalert2": "^11.4.8",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
